# libiio

iiod/: CMakeLists.txt
